[gd_scene load_steps=4 format=2]

[ext_resource path="res://hud/system/fleet/ship_group_card.gd" type="Script" id=1]
[ext_resource path="res://gui/spin_box_imediate_update.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/x.svg-47a3a67eca4bee58f25f23dd32e35e3d.stex"

[node name="ShipGroupCard" type="PanelContainer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 585.0
margin_bottom = 154.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 576.0
margin_bottom = 145.0
custom_constants/separation = 7

[node name="LabelFormation" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 574.0
margin_bottom = 14.0
text = "no_translate.formation.position"
align = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 574.0
margin_bottom = 66.0
rect_min_size = Vector2( 45, 45 )
mouse_filter = 2
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="LabelCategory" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 574.0
margin_bottom = 87.0
text = "no_translate.ship_model"
align = 1

[node name="ShipNumber" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 574.0
margin_bottom = 122.0
custom_constants/separation = 5
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/ShipNumber"]
margin_right = 112.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HBoxContainerNumber" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ShipNumber"]
margin_left = 117.0
margin_right = 350.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/ShipNumber/HBoxContainerNumber"]
margin_top = 2.0
margin_right = 74.0
margin_bottom = 26.0
size_flags_vertical = 4
allow_greater = true
script = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ShipNumber/HBoxContainerNumber"]
margin_left = 78.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 21.0
text = "/"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ShipNumber/HBoxContainerNumber"]
margin_left = 87.0
margin_right = 233.0
margin_bottom = 28.0
mouse_filter = 2

[node name="LabelMaxNumber" type="Label" parent="MarginContainer/VBoxContainer/ShipNumber/HBoxContainerNumber/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 139.0
margin_bottom = 21.0
text = "no_translate.number"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ShipNumber"]
margin_left = 355.0
margin_right = 574.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ShipNumber/HBoxContainer"]
margin_right = 219.0
margin_bottom = 28.0
text = "hud.system.fleet.menu.card.add"

[node name="ProgressBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 574.0
margin_bottom = 143.0

[node name="LabelNumber" type="Label" parent="MarginContainer/VBoxContainer/ProgressBar"]
margin_right = 258.0
margin_bottom = 14.0
text = "hud.system.fleet.menu.card.number %d"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/ProgressBar"]
margin_left = 262.0
margin_right = 332.0
margin_bottom = 14.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="LabelTime" type="Label" parent="MarginContainer/VBoxContainer/ProgressBar"]
margin_left = 336.0
margin_right = 574.0
margin_bottom = 14.0
text = "hud.system.fleet.menu.card.time %d"
